Bug 1522026 - Don't cancel animations over relative updates with no offset. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D17757