gfx/layers/apz/src/AsyncPanZoomController.cpp
@@ -4468,9 +4468,10 @@ void AsyncPanZoomController::NotifyLayersUpdated(
       // If an animation is underway, tell it about the scroll offset update.
       // Some animations can handle some scroll offset updates and continue
       // running. Those that can't will return false, and we cancel them.
-      if ((!mAnimation && !CanHandleScrollOffsetUpdate(mState)) ||
-          (mAnimation &&
-           !mAnimation->HandleScrollOffsetUpdate(relativeDelta))) {
+      if (relativeDelta != Some(CSSPoint()) &&
+          ((!mAnimation && !CanHandleScrollOffsetUpdate(mState)) ||
+           (mAnimation &&
+            !mAnimation->HandleScrollOffsetUpdate(relativeDelta)))) {
         // Cancel the animation (which might also trigger a repaint request)
         // after we update the scroll offset above. Otherwise we can be left
         // in a state where things are out of sync.
